# dotfiles

./: .Rakefile.swp  .gitignore  Brewfile  README.md  Rakefile
Vim/: .vimrc
apt/: .Aptfile.sh.swp
git/: aliases.sh  boff
homebrew/: Brewfile  install.sh  test-to-del.sh
include/: .templates.sh.swp  alias.sh  export.sh  git-alias.sh  path.sh  shell-templates.sh  templates.sh
install/: challenge1.sh  install  links_vars  links_vars.sh  test.sh
macos/: macos.sh
package/: .Brewfile.swp  Aptfile.sh  Brewfile  Yumfile.sh
rc/: .bash_profile  .bash_profile_bak_iMac20180621  .dircolors  .gdbinit  .gitconfig  .vimrc  .zshrc
template/: Makefile  main.cpp
template/buildsystem/cmake/: .readme.markdown.swp  CMakeLists.txt  readme.markdown
template/buildsystem/cmake-google-test/: CMakeLists.txt
template/buildsystem/cmake-with-boost/: CMakeLists.txt
template/buildsystem/cmake/project_tree_template/src/: CMakeLists.txt
template/buildsystem/cmake/standalone/: .CMakeLists.txt.swp  CMakeLists.txt
template/c++/c++11/: main.cpp
vim/: .vimrc
